[gd_scene load_steps=6 format=3 uid="uid://bho2wnwyr3h3l"]

[ext_resource type="Script" path="res://components/health_bar/HealthBar.gd" id="1_1hmfg"]
[ext_resource type="Texture2D" uid="uid://d0sest4fkwb7q" path="res://components/health_bar/textures/HealthBar.png" id="1_j128m"]

[sub_resource type="AtlasTexture" id="1"]
atlas = ExtResource("1_j128m")
region = Rect2(1, 35, 78, 10)

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource("1_j128m")
region = Rect2(1, 19, 78, 10)

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource("1_j128m")
region = Rect2(1, 3, 78, 10)

[node name="HealthBar" type="Node2D"]
script = ExtResource("1_1hmfg")

[node name="UnderBlood" type="TextureProgressBar" parent="."]
offset_right = 78.0
offset_bottom = 10.0
value = 100.0
texture_under = SubResource("1")
texture_progress = SubResource("3")
tint_progress = Color(0.768627, 0.105882, 0.207843, 1)

[node name="OverBlood" type="TextureProgressBar" parent="."]
offset_right = 78.0
offset_bottom = 10.0
value = 100.0
texture_over = SubResource("2")
texture_progress = SubResource("3")
tint_progress = Color(0.329412, 0.784314, 0.0745098, 1)

[node name="Block" type="TextureProgressBar" parent="."]
offset_right = 78.0
offset_bottom = 10.0
texture_over = SubResource("2")
texture_progress = SubResource("3")
tint_progress = Color(0.407724, 0.42893, 0.428925, 1)
